chore: set up publishing, disable java preview features